# LEEDGRAPH_FINAL

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: project_directory.csv  project_features.parquet  standardized_credits.parquet
data/rubrics/: mapping_rules.yaml
data/rubrics/v4.1/ID+C_Retail/: LEED_v4.1_for_Interior_Design_and_Construction_Checklist_Updated_4.26.XLSX
data/rubrics/v4.1/O+M_ExistingBuildings/: LEED_O_M_v4_1___scorecard_190213.xlsx
data/rubrics/v4/BD+C_NewConstruction/: LEED_v4_for_Building_Design_and_Construction__1_PAGE.xlsx
data/rubrics/v5/: LEED_v5_Scorecard_BDC_Core_and_Shell.xlsx  LEED_v5_Scorecard_BDC_New_Construction.xlsx  LEED_v5_Scorecard_IDC.xlsx  LEED_v5_Scorecard_OM.xlsx
data/scorecards/: Scorecard_HSBCBuilding_251013.txt  Scorecard_INGTower_090907.txt  Scorecard_VacheronConstantinSeoulFlagship_251007.txt
docs/: 01_전처리_과정.md  02_파이프라인_및_분석.md
notebooks/: 01_전처리.ipynb  02_데이터분석.ipynb
notebooks/src/: __init__.py
notebooks/src/data/: __init__.py  loader.py  rubric_loader.py
notebooks/src/langgraph_workflow/: __init__.py  graph.py  nodes.py  state.py
results/tables/: Table2_performance.csv  Table3_shap_top.csv  Table4_distribution.csv  Table4_robustness.csv  Table5_llm_validation_summary.csv  Table5_shap_by_grade.csv  Table6_llm_issues.csv  Table_3_4_consistency.csv  Table_3_4_drift.csv  Table_fold_stability.csv  Table_model_comparison.csv
scripts/: generate_pipeline_figure.py  generate_table4_distribution.py  generate_table_3_4_consistency.py  generate_table_3_4_drift.py  regenerate_features.py
(+2 files in other folders)
