[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "leedgraph"
version = "0.1.0"
description = "LangGraph 기반 LEED 인증 버전 표준화 및 XAI 영향 요인 분석"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["LEED", "LangGraph", "XAI", "SHAP", "green-building", "sustainability"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
